# monochrome

./: .coderabbit.yaml  .env  .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  DOCKER.md  Dockerfile  INSTANCES.md  JAM_POCKETBASE_MIGRATION.md  README.md  bun.lockb  capacitor.config.json  capacitor.config.ts  check-globals.ts  config.js  debug-audio.ts  docker-compose.yml  editors-picks-input.txt  eslint.config.js  fix-gen.py  fix_index.py  fix_index_v2.py  gen-editors-picks.py  get-html.ts  hifi_commits.json  index.html  netlify.toml  neutralino.config.dev.json  neutralino.config.json  nginx.conf  package-lock.json  package.json  page_content.html  qobuz_test2.json  remotes.txt  self-hosted-database.md  server.js  styles.css  tauri.css  (+25 more)
.claude/: settings.local.json
.devcontainer/: Dockerfile  devcontainer.json
.github/: pull_request_template.md
.playwright-mcp/: monochrome-library-2026-03-19.json
android/: build.gradle  capacitor.settings.gradle  settings.gradle.kts
database/: pb_schema.json
desktop/: main.js  package.json  preload.js
dev-dist/: sw.js  workbox-f902de14.js
docker/: docker-compose.yml
extension/: README.md  content.js  manifest.json  rules.json
functions/: proxy-audio.js  upload.js
js/: 3d-visualizer.js  HiFi.test.ts  api.js  (+117 more)
src-tauri/: .gitignore  Cargo.toml  README.md  discord-init.js  package-lock.json  package.json  tauri.conf.json
src-tauri/.github/workflows/: release.yml
src-tauri/capabilities/: default.json  desktop.json  main-capability.json
src-tauri/icons/: icon.icns
src-tauri/src/: index.html  lib.rs  main.rs
(+155 files in other folders)
