[package]
name = "Monochrome"
version = "0.1.0"
description = "Minimalist, Unlimited Music Streaming."
authors = ["Samidy"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["devtools", "image-png", "tray-icon"] }
tauri-plugin-notification = "2.0"
tauri-plugin-global-shortcut = "2.0"
tauri-plugin-shell = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
discord-rich-presence = "0.2"
tauri-plugin-single-instance = "2.3.7"
tauri-plugin-dialog = "2.0"
tauri-plugin-window-state = "2.0"
